# Pod-frontend

./: .gitignore  README.md  pyproject.toml  requirements.txt  rxconfig.py
Podly/: Podly.py
Podly/components/: callout.py  card.py  cards.py  footer.py  icon.py  navbar.py  sidebar.py
Podly/db/: client.py
Podly/pages/: __init__.py  about.py  dashboard.py  index.py  search.py  settings.py
Podly/templates/: default_template.py  template.py
